@@ -12,5 +12,6 @@ DIST mit-krb5-1.6.3-patches-0.5.tar.bz2 5317 RMD160 423c728e6f399fb4605373495a36
 DIST mit-krb5-1.7-patches-0.6.tar.bz2 707 RMD160 8849cc7c663cd1cfed35af9647197af8ce214a0e SHA1 056834d3068e04e8d636d242d38ae580bebb7cd5 SHA256 ea66d5a10fbb30adeaef9de73d77a7a034cc2ff1dcc82aa52bde21b370c574f6
 EBUILD mit-krb5-1.6.3-r116.ebuild 2961 RMD160 7ab8b74ffb56f2d6f21617058ff9014873c0fa4a SHA1 3016e4a54bbabb47aeb3450ade0e7133e6ea8689 SHA256 17232754817d7d757589a9e90bb994d0de192856f069ad3dfc69364294271ce0
 EBUILD mit-krb5-1.7-r101.ebuild 2607 RMD160 eecc0385c237072cae0e617d034dfd57527ccbb2 SHA1 82007ddfc09a3cb8c3904171ba46a9b8ea685596 SHA256 1749b31865ab320a55b975ef1edcb1408fb0c1b25ac69424ac78e332255e11f8
-MISC ChangeLog 670 RMD160 2bef0a2efa2285dcdc4b1c0a20507c97dc2402ac SHA1 7a217c41fc7c5bd3e14386ac5c64f3fc8ca47635 SHA256 7a9bda9c750fdf40b1fccb69b5de22cb4765cde3352d246bbfc45c7d7cc7cec9
+EBUILD mit-krb5-1.7-r102.ebuild 2665 RMD160 e6a95b23483d745f2d13c7a2c690188c62a4d83c SHA1 3bfdb113d913f0158f946c31a690e8507638caa8 SHA256 189c4e2ec4792dc9d1f266932c557c9f70a99ae608d87c75e74729778fc99d1f
+MISC ChangeLog 782 RMD160 00479177b2989bfaa22883bd314c8a9d22ce9ab0 SHA1 39637d23218335a92f7dc232fdd9a48a0464b1ed SHA256 7a7b2032f8b0d59b70e4e606c728ae0ab1f8abe76e2c7ae36dc8792f2dd93d4a
 MISC metadata.xml 639 RMD160 5e0f0a281fd7c2db9cef027d510f4f65fe769e2e SHA1 5ff055ed4d8a80384cba07293c41dd10983d2792 SHA256 fe666e55cb89f0dda7aa81fefe167f1cf2934053c83f1ee147781c34b7f28595
